# Practice2Factor

./: db.sqlite3  manage.py  pyproject.toml
TwoFactor/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: models.py  urls.py  views.py
templates/myapp/: delete.html  login.html  register.html
